--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "infos": {
         "author": "Steve Göring",
         "title": "stg7.github.io",
-        "publications": "will be replaces by content of publications_file",
+        "publications": "will be replaced by content of publications_file",
         "photos": "will be replaced by photos of photos_dir"
     },
     "photos_dir": "photos",
